--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import "./fonts.css";
+
 .App {
   text-align: center;
+  font-family: RubikLight;
+  font-size: 18px;
+  color: #fff;
 }
 
 .App-logo {
@@ -15,7 +20,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
