--- a/src/components/TimeTracking/Card.scss
+++ b/src/components/TimeTracking/Card.scss
@@ -3,6 +3,9 @@ $baseClass: ".time-tracking";
 #{$baseClass}__card {
   width: 100%;
 
+  display: flex;
+  flex-direction: column;
+
   &--icon {
     display: flex;
     justify-content: flex-end;
@@ -23,6 +26,7 @@ $baseClass: ".time-tracking";
 
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
   }
 
   &--header {
